[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ragdb"
version = "1.0.5"
description = "A patent-pending, embedded, multimodal RAG database that performs automated ingestion, hybrid vector+keyword search, and offline retrieval entirely inside a portable single-file SQLite container."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
  {name = "Ahmed Bin Khalid", email = "ahmed.khalid2108@gmail.com"}
]
keywords = ["rag", "database", "search", "sqlite", "ocr", "embedding", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Database",
]

# The Lightweight Base (Default)
dependencies = [
    "numpy",
    "PyPDF2",
    "pandas",
    "openpyxl",
    "python-docx",
    "pillow",
    "fastapi", # kept server as core since it's small
    "uvicorn"
]

# The Heavy Extras
[project.optional-dependencies]
ocr = [
    "rapidocr_onnxruntime",
    "onnxruntime",
    "opencv-python-headless"
]

[project.urls]
"Homepage" = "https://github.com/yourusername/ragdb"
"Bug Tracker" = "https://github.com/yourusername/ragdb/issues"

# Makes the CLI command 'ragdb' available in terminal
[project.scripts]
ragdb = "ragdb.cli:main"